# aoc2025

./: CMakeLists.txt
.zed/: debug.json  settings.json  tasks.json
1/: main.cpp
2/: Day2.cpp
3/: main.cpp
4/: Day4.cpp
5/: main.cpp
6/: Day6.cpp
